--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,19 +44,17 @@ jobs:
     pool:
       vmImage: windows-latest
     steps:
-      - powershell: |
-             wget https://dot.net/v1/dotnet-install.ps1 -OutFile C:\dotnet-install.ps1
-             C:\dotnet-install.ps1 -Version 6.0.300-preview.22204.3
-             dotnet --info
-             Write-Host "##vso[task.prependpath]C:\\Users\\VssAdministrator\\AppData\\Local\\Microsoft\\dotnet"
-        displayName: Install .NET 6.0.300-preview.22204.3
+      - task: UseDotNet@2
+        displayName: 'Install .NET SDK'
+        inputs:
+          packageType: 'sdk'
+          version: '$(NET_VERSION)'
       - task: CmdLine@2
         displayName: 'Install .NET MAUI Workload'
         inputs:
             script : |
               dotnet --info
               dotnet workload install maui
-              dotnet new globaljson --sdk-version 6.0.300-preview.22204.3 --force
       # if this is a tagged build, then update the version number
       - powershell: |
           $buildSourceBranch = "$(Build.SourceBranch)"
@@ -161,12 +159,11 @@ jobs:
         displayName: 'Set Xcode Version'
         inputs:
           script: echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_$(XcodeVersion).app;sudo xcode-select --switch /Applications/Xcode_$(XcodeVersion).app/Contents/Developer
-      - task: CmdLine@2
-        displayName: Install .NET 6.0.300-preview.22204.3
+      - task: UseDotNet@2
+        displayName: 'Install .NET SDK'
         inputs:
-          script: |
-            curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 6.0.300-preview.22204.3 --quality preview
-            dotnet --version
+          packageType: 'sdk'
+          version: '$(NET_VERSION)'
       - task: CmdLine@2
         displayName: 'Install .NET MAUI workload'
         inputs:
