Implement Shell in `CommunityToolkit.Maui.Markup.Sample` (#70)
* Add Shell Routing

* Fix Shell Query Attributes

* Update NewsDetailViewModel.cs

* Remove Unused Code

* Add Styles

* `dotnet format`

* Update CommunityToolkit.Maui.Markup.Sample.csproj

* Remove Unnecessary Usings

* Remove Comments

* Refactor Code

* Update AppShell.cs

* Update CommunityToolkit.Maui.Markup.Sample.csproj

* Update BaseContentPage.cs

* Update StoryDataTemplate.cs

* Update AppShell.cs

--- a/samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj
+++ b/samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj
@@ -38,14 +38,11 @@
 
     <!-- Images -->
     <MauiImage Include="Resources\Images\*" />
-    <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
-
-    <!-- Custom Fonts -->
     <MauiFont Include="Resources\Fonts\*" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-rc3" />
+    <PackageReference Include="CommunityToolkit.Maui" Version="1.0.0" />
     <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="Refit" Version="6.3.2" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview3" />
