--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,8 @@ variables:
   NugetPackageVersion: '$(CurrentSemanticVersion)'
   NET_VERSION: '6.0.x'
   RunPoliCheck: false
-  PathToSolution: 'src/CommunityToolkit.Maui.Markup.sln'
+  PathToLibrarySolution: 'src/CommunityToolkit.Maui.Markup.sln'
+  PathToSamplesSolution: 'samples/CommunityToolkit.Maui..Markup.Sample.sln'
   PathToCommunityToolkitCsproj: 'src/CommunityToolkit.Maui.Markup/CommunityToolkit.Maui.Markup.csproj'
   PathToCommunityToolkitSampleCsproj: 'samples/CommunityToolkit.Maui.Markup.Sample/CommunityToolkit.Maui.Markup.Sample.csproj'
   PathToCommunityToolkitUnitTestCsproj: 'src/CommunityToolkit.Maui.Markup.UnitTests/CommunityToolkit.Maui.Markup.UnitTests.csproj'
@@ -118,10 +119,10 @@ jobs:
 
       # check vulnerabilities
       - powershell: |
-          dotnet list $(PathToSolution) package --vulnerable --include-transitive | findstr /S /c:"has the following vulnerable packages";
+          dotnet list $(PathToLibrarySolution) package --vulnerable --include-transitive | findstr /S /c:"has the following vulnerable packages";
           if ($LastExitCode -ne 1)
           {
-            dotnet list $(PathToSolution) package --vulnerable --include-transitive;
+            dotnet list $(PathToLibrarySolution) package --vulnerable --include-transitive;
             exit 1;
           }
 
@@ -156,6 +157,33 @@ jobs:
         inputs:
           artifactName: nuget
           pathToPublish: '$(Build.ArtifactStagingDirectory)'
+
+  - job: verify_formatting_windows
+    displayName: Verify Code Formatting on Windows
+    pool:
+      vmImage: windows-latest
+    steps:
+      - task: UseDotNet@2
+        displayName: 'Install Latest .NET SDK'
+        inputs:
+          packageType: 'sdk'
+          version: '$(LATEST_NET6_VERSION)'
+
+      - powershell: dotnet workload install maui
+        displayName: Install Latest .NET MAUI Workload
+
+      - task: Bash@3
+        displayName: 'Verify Formatting'
+        env:
+          PathToSamplesSolution: $(PathToSamplesSolution)
+        inputs:
+          targetType: 'inline'
+          script: |
+            dotnet format $PathToSamplesSolution --verify-no-changes --exclude-diagnostics CA1416
+            status=$?
+            [ $status -eq 0 ] && echo "No errors found"
+            [ $status -ne 0 ] && echo "Formatting errors found. In the command line, please run \`dotnet format $PathToSamplesSolution\`, then commit + push the newly formatted code"
+            exit $status
 
   - job: build_macos
     displayName: Build macOS Library
@@ -210,3 +238,34 @@ jobs:
         displayName: 'Pack CommunityToolkit NuGets'
         inputs:
           script: 'dotnet pack -c Release $(PathToCommunityToolkitCsproj) -p:PackageVersion=$(NugetPackageVersion) --output $(Build.ArtifactStagingDirectory)/nuget -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg'
+
+  - job: verify_formatting_macos
+    displayName: Verify Code Formatting on macOS
+    pool:
+      vmImage: macos-12
+    steps:
+      - task: CmdLine@2
+        displayName: 'Set Xcode Version'
+        inputs:
+          script: echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_$(XcodeVersion).app;sudo xcode-select --switch /Applications/Xcode_$(XcodeVersion).app/Contents/Developer
+      
+      - task: UseDotNet@2
+        displayName: Install Latest .NET SDK
+        inputs:
+          packageType: 'sdk'
+          version: '$(LATEST_NET6_VERSION)'
+
+      - task: CmdLine@2
+        displayName: 'Install Latest .NET MAUI Workload'
+        inputs:
+          script: dotnet workload install maui
+
+      - task: CmdLine@2
+        displayName: 'Verify Formatting'
+        inputs:
+          script: |
+            dotnet format $(PathToSamplesSolution) --verify-no-changes --exclude-diagnostics CA1416
+            status=$?
+            [ $status -eq 0 ] && echo "No errors found"
+            [ $status -ne 0 ] && echo "Formatting errors found. In the command line, please run \`dotnet format $(PathToSamplesSolution)\`, then commit + push the newly formatted code"
+            exit $status
