--- a/.editorconfig
+++ b/.editorconfig
@@ -105,3 +105,7 @@ dotnet_naming_symbols.static_fields.applicable_accessibilities = internal, priva
 
 dotnet_naming_style.static_field_style.capitalization = camel_case
 dotnet_naming_style.static_field_style.required_prefix = 
+
+# Modifier preferences
+csharp_prefer_static_local_function = true:suggestion
+csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:error
