--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -237,35 +237,4 @@ jobs:
       - task: CmdLine@2
         displayName: 'Pack CommunityToolkit NuGets'
         inputs:
-          script: 'dotnet pack -c Release $(PathToCommunityToolkitCsproj) -p:PackageVersion=$(NugetPackageVersion) --output $(Build.ArtifactStagingDirectory)/nuget -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg'
-
-  - job: verify_formatting_macos
-    displayName: Verify Code Formatting on macOS
-    pool:
-      vmImage: macos-12
-    steps:
-      - task: CmdLine@2
-        displayName: 'Set Xcode Version'
-        inputs:
-          script: echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_$(XcodeVersion).app;sudo xcode-select --switch /Applications/Xcode_$(XcodeVersion).app/Contents/Developer
-      
-      - task: UseDotNet@2
-        displayName: Install Latest .NET SDK
-        inputs:
-          packageType: 'sdk'
-          version: '$(NET_VERSION)'
-
-      - task: CmdLine@2
-        displayName: 'Install Latest .NET MAUI Workload'
-        inputs:
-          script: dotnet workload install maui
-
-      - task: CmdLine@2
-        displayName: 'Verify Formatting'
-        inputs:
-          script: |
-            dotnet format $(PathToSamplesSolution) --verify-no-changes --exclude-diagnostics CA1416
-            status=$?
-            [ $status -eq 0 ] && echo "No errors found"
-            [ $status -ne 0 ] && echo "Formatting errors found. In the command line, please run \`dotnet format $(PathToSamplesSolution)\`, then commit + push the newly formatted code"
-            exit $status
+          script: 'dotnet pack -c Release $(PathToCommunityToolkitCsproj) -p:PackageVersion=$(NugetPackageVersion) --output $(Build.ArtifactStagingDirectory)/nuget -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
