--- a/.editorconfig
+++ b/.editorconfig
@@ -113,9 +113,6 @@ dotnet_naming_style.static_field_style.required_prefix =
 csharp_prefer_static_local_function = true:suggestion
 csharp_preferred_modifier_order = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:error
 
-# CA1305: The behavior of 'string.Format(string, object)' could vary based on the current user's locale settings. Replace this call
-dotnet_diagnostic.CA1305.severity = error
-
 # CA1822: Member does not access instance data and can be marked as static
 dotnet_diagnostic.CA1822.severity = error
 
@@ -131,5 +128,5 @@ dotnet_diagnostic.CA2208.severity = error
 # CA1834: Use 'StringBuilder.Append(char)' instead of 'StringBuilder.Append(string)' when the input is a constant unit string
 dotnet_diagnostic.CA1834.severity = error
 
-# CA1309: Use ordinal string comparison
-dotnet_diagnostic.CA1309.severity = error
+# IDE0220: Add explicit cast
+dotnet_diagnostic.IDE0220.severity = error
