--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -237,4 +237,8 @@ jobs:
       - task: CmdLine@2
         displayName: 'Pack CommunityToolkit NuGets'
         inputs:
-          script: 'dotnet pack -c Release $(PathToCommunityToolkitCsproj) -p:PackageVersion=$(NugetPackageVersion) --output $(Build.ArtifactStagingDirectory)/nuget -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg'
+          script: |
+            echo PathToCommunityToolkitCsproj: $PathToCommunityToolkitCsproj
+            echo NugetPackageVersion: $NugetPackageVersion
+            echo (Build.ArtifactStagingDirectory)/nuget $(Build.ArtifactStagingDirectory)/nuget
+            dotnet pack -c Release $(PathToCommunityToolkitCsproj) -p:PackageVersion=$(NugetPackageVersion) --output $(Build.ArtifactStagingDirectory)/nuget -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
