--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -238,7 +238,7 @@ jobs:
         displayName: 'Pack CommunityToolkit NuGets'
         inputs:
           script: |
-            echo PathToCommunityToolkitCsproj: $PathToCommunityToolkitCsproj
-            echo NugetPackageVersion: $NugetPackageVersion
-            echo (Build.ArtifactStagingDirectory)/nuget $(Build.ArtifactStagingDirectory)/nuget
+            echo PathToCommunityToolkitCsproj: $(PathToCommunityToolkitCsproj)
+            echo NugetPackageVersion: $(NugetPackageVersion)
+            echo Build.ArtifactStagingDirectory/nuget $(Build.ArtifactStagingDirectory)/nuget
             dotnet pack -c Release $(PathToCommunityToolkitCsproj) -p:PackageVersion=$(NugetPackageVersion) --output $(Build.ArtifactStagingDirectory)/nuget -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
