--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -169,6 +169,7 @@ jobs:
         inputs:
           packageType: 'sdk'
           version: '$(NET_VERSION)'
+          includePreviewVersions: true
 
       - powershell: dotnet workload install maui
         displayName: Install Latest .NET MAUI Workload
